apps/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
